name:           PrismataAssist
version:        0.1.0.0
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

executable PrismataAssist
  main-is: Main.hs
  ghc-options: 
    -threaded -rtsopts -with-rtsopts=-N -Wall -Wmissing-local-signatures
  build-depends:
      base >=4.7 && <5
    , reactive-banana
    , vty
  default-language: Haskell2010
